new project to replace remote project

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,43 @@
----
-theme :
-  name : the-minimum
----
-{% include JB/setup %}
-{% include themes/the-minimum/default.html %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1;charset=utf-8">
+        <title>{{ page.title }}</title>
+        <meta name="viewport" content="width=device-width">
+
+        <!-- syntax highlighting CSS -->
+        <link rel="stylesheet" href="/css/syntax.css">
+
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="/css/main.css">
+
+    </head>
+    <body>
+
+        <div class="site">
+          <div class="header">
+            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+            <a class="extra" href="/">home</a>
+          </div>
+
+          {{ content }}
+
+          <div class="footer">
+            <div class="contact">
+              <p>
+                My Name<br />
+                Email
+              </p>
+            </div>
+            <div class="contact">
+              <p>
+                <a href="https://github.com/wisarmy">wisarmy</a><br />
+				wisarmy@gmail.com
+              </p>
+            </div>
+          </div>
+        </div>
+
+    </body>
+</html>
