--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,9 @@
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
+			<a class="extra" href="/">Blog</a>
+			<a class="extra" href="/about">About</a>
+			<a class="extra" href="/contact">Contact</a>
 <script>
   (function() {
     var cx = '009392026585092218883:ukompb-gybo';
