--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/wisarmy">wisarmy</a><br />
+                <a href="https://github.com/wisarmy">wisarmy</a><a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=9c3Dx8DNx8fGzbWEhNuWmpg" style="text-decoration:none;"><img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_01.png"/></a><br />
 				wisarmy@gmail.com
               </p>
             </div>
