--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
 			<a class="extra" href="/">Blog</a>
-			<a class="extra" href="/about">About</a>
+			<a class="extra" href="/site/about.html">About</a>
 			<a class="extra" href="/contact">Contact</a>
 <script>
   (function() {
