--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
 			<a class="extra" href="/">Blog</a>
-			<a class="extra" href="/site/about.html">About</a>
+			<a class="extra" href="/about">About</a>
 			<a class="extra" href="/contact">Contact</a>
 <script>
   (function() {
@@ -49,7 +49,7 @@
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/wisarmy">wisarmy</a><a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=9c3Dx8DNx8fGzbWEhNuWmpg" style="text-decoration:none;"><img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_01.png"/></a><br />
+                <a href="https://github.com/wisarmy">wisarmy</a><br />
 				wisarmy@gmail.com
               </p>
             </div>
